# rococua-muhah

./: .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile.backend  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  README_CRUD_SYSTEM.md  README_WEBSOCKETS.md  app.db  dashboard-architecture-plan.md  docker-compose.yml  example_event_publisher.py  launch.bat  launch.sh  launcher.py  requirements.txt  test_websockets.py
app/: main.py  pyproject.toml  requirements.txt
app/api/: __init__.py  order.py  product.py  role.py  user.py  ws.py
app/auth/: __init__.py  jwt.py  oauth2.py  password.py  permissions.py  schemas.py  services.py
app/core/: config.py  database.py
app/models/: __init__.py  order.py  order_item.py  product.py  role.py  user.py
app/schemas/: __init__.py  order.py  order_item.py  product.py  role.py  user.py
app/scripts/: __init__.py  seed_data.py
app/services/: __init__.py  base.py  product_service.py  user_service.py
dashboard/: .env.example  Dockerfile  README.md  README_CRUD.md  jest.config.js  jest.setup.js  next.config.js  package.json  tsconfig.json
dashboard/app/: globals.css  layout.tsx  page.tsx
dashboard/app/login/: page.tsx
dashboard/components/: RealTimeOrderStatus.tsx
dashboard/hooks/: useGenericQuery.ts  useOrdersQuery.ts  useProductsQuery.ts  useRolesQuery.ts  useUsersQuery.ts  useWebSocket.ts
dashboard/providers/: AppProviders.tsx  AuthProvider.tsx
dashboard/services/: authApi.ts  baseApi.ts  ordersApi.ts  productsApi.ts  rolesApi.ts  usersApi.ts
dashboard/utils/: crudGenerator.ts
migrations/: env.py
(+7 files in other folders)
